# timeSeriesChallengeDez23

./: README.md  VendasSupermercados+CDI.csv  pyproject.toml  supermarket.ipynb
