[tool.poetry]
name = "timeserieschallengedez23"
version = "0.1.0"
description = ""
authors = ["Lucas Praciano <luskcct@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
statsmodels = "^0.14.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
pmdarima = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
